# ResearchEverything-Crypto

./: .dockerignore  .env.example  .gitattributes  .gitignore  .replit  Dockerfile  HANDOFF.md  README.md  backup.sql  landing-page-design-system.md  package-lock.json  package.json  replit.md  sedB39yOa  skills-lock.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--This-is-the-one-your-architecture-doesn-t-have-yet-and_1774426556349.txt  Pasted-2-A-KG-that-aids-prompt-structuring-This-is-the-higher-_1776450607181.txt  Pasted-Abhijit-Vadavalli-18-Apr-2026-at-3-30-38-PM-I-need-to-l_1776506489579.txt  Pasted-EDR-s-decomposition-integrates-three-signals-original-q_1776450802074.txt  Pasted-The-user-wants-a-deep-research-report-on-HYPE-Hyperliqu_1776250608720.txt  Pasted-The-user-wants-to-see-TradeXYZ-s-share-of-Hyperliquid-s_1776881982468.txt  Pasted-What-I-d-suggest-doing-first-concretely-In-order-smalle_1776510454997.txt  Pasted-What-s-strong-The-retry-loop-design-is-pragmatic-Feedin_1774424322154.txt  Pasted-What-this-tool-does-Sends-crafted-prompts-to-an-AI-agen_1776757951141.txt  Pasted-a-few-places-where-I-d-push-back-hard-before-you-commit_1776450881568.txt  Propr_Deep_Research_Report_1773049742096.md  README_1776435199967.md  SKILL_(1)_1774343333784.md  SKILL_1774167197148.md  allium_1774167197155.md  coingecko_1774167197155.md  defillama_1774167197154.md  (+4 more)
services/backtest-engine/: README.md  example_plan.json  pyproject.toml
services/backtest-engine/app/: engine.py  loader.py  main.py  plan.py
(+4729 files in other folders)
